--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,13 +17,13 @@
 
         {{ partial "carousel.html" . }}
 
+        {{ partial "see_more.html" . }}
+
         {{ partial "features.html" . }}
 
         {{ partial "testimonials.html" . }}
 
-        {{ partial "see_more.html" . }}
-
-        {{ partial "recent_posts.html" . }}
+        {{/*{{ partial "recent_posts.html" . }}*/}}
 
         {{ partial "clients.html" . }}
 
