--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
-<footer id="footer">
-    <div class="container">
+{{/*<footer id="footer">
+        <div class="container">
 
         {{ if isset .Site.Params "about_us" }}
         <div class="col-md-4 col-sm-6">
@@ -61,7 +61,7 @@
     </div>
     <!-- /.container -->
 </footer>
-
+*/}}
 <!-- /#footer -->
 
 <!-- *** FOOTER END *** -->
@@ -76,10 +76,9 @@ _________________________________________________________ -->
             <p class="pull-left">{{ .Site.Params.copyright | safeHTML }}</p>
             {{ end }}
             <p class="pull-right">
-              {{ i18n "templateBy" }} <a href="http://bootstrapious.com/free-templates">Bootstrapious</a>.
-              <!-- Not removing this link is part of the licence conditions of the template. Thanks for understanding :) -->
-
-              {{ i18n "portedBy" }} <a href="https://github.com/devcows/hugo-universal-theme">DevCows</a>
+                {{ range .Site.Menus.topbar.ByWeight }}
+                <a href="{{ .URL }}" target="_blank" style="opacity: 1;">{{ .Pre }}</a>
+                {{ end }}
             </p>
         </div>
     </div>
