--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -15,7 +15,7 @@
 
                 <div id="contact-message"></div>
 
-                <form {{ with .Site.Params.contact_form_ajax }}class="contact-form-ajax"{{ else }}{{ end }} method="post" action="https://formspree.io/{{ .Site.Params.email }}" netlify>
+                <form {{ with .Site.Params.contact_form_ajax }}class="contact-form-ajax"{{ else }}{{ end }} method="post" action="https://formspree.io/{{ .Site.Params.formspree_id }}" netlify>
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
