--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,25 +20,31 @@
 
   {{ .Hugo.Generator }}
 
-  <link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,500,700,800' rel='stylesheet' type='text/css'>
-
-  <!-- Bootstrap and Font Awesome css -->
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-  <!-- Css animations  -->
-  <link href="{{ "css/animate.css" | relURL}}" rel="stylesheet">
+  {{ $styleName := "default" }}
+  {{ if and (isset .Site.Params "style") .Site.Params.style }}
+    {{ $styleName = .Site.Params.style }}
+  {{ end }}
+  {{ $roboto := resources.Get "css/roboto.css" }}
+  {{ $fontAwesome := resources.Get "css/font-awesome-4.7.0.min.css" }}
+  {{ $bootstrap := resources.Get "css/bootstrap-3.3.7.min.css" }}
+  {{ $animate := resources.Get "css/animate.css" }}
+  {{ $base := resources.Get (printf "css/style.%s.css" $styleName ) }}
+  {{ $custom := resources.Get "css/custom.css" }}
+  {{ $owlCarousel := resources.Get "css/owl.carousel.css" }}
+  {{ $owlTheme := resources.Get "css/owl.theme.css" }}
+  {{ $style := slice $roboto $fontAwesome $bootstrap $animate $base $custom $owlCarousel $owlTheme | resources.Concat "css/global.css" | resources.Minify | fingerprint }} 
+<link rel="stylesheet"
+      href="{{ $style.RelPermalink }}"
+      integrity="{{ $style.Data.Integrity }}">
 
   <!-- Theme stylesheet, if possible do not edit this stylesheet -->
-  {{ if and (isset .Site.Params "style") .Site.Params.style }}
+  <!--{{ if and (isset .Site.Params "style") .Site.Params.style }}
     <link href="{{ "css/style" | relURL}}.{{ .Site.Params.style }}.css" rel="stylesheet" id="theme-stylesheet">
   {{ else }}
     <link href="{{ "css/style.default.css" | relURL}}" rel="stylesheet" id="theme-stylesheet">
   {{ end }}
+  -->
 
-
-  <!-- Custom stylesheet - for your changes -->
-  <link href="{{ "css/custom.css" | relURL}}" rel="stylesheet">
 
   <!-- Responsivity for older IE -->
   {{ `
@@ -54,10 +60,6 @@
   <link rel="icon" type="image/png" sizes="32x32" href="{{ "img/favicon-32x32.png" | relURL }}" />
   <link rel="icon" type="image/png" sizes="16x16" href="{{ "img/favicon-16x16.png" | relURL }}" />
   <link rel="manifest" href="{{ "site.webmanifest" | relURL }}" />
-  <!-- owl carousel css -->
-
-  <link href="{{ "css/owl.carousel.css" | relURL}}" rel="stylesheet">
-  <link href="{{ "css/owl.theme.css" | relURL}}" rel="stylesheet">
 
   <link rel="alternate" href="{{ "/index.xml" | absURL }}" type="application/rss+xml" title="{{ .Site.Title }}">
 
