--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -13,5 +13,5 @@
 {{ $gmaps := resources.Get "js/gmaps.init.js" }}-->
 {{ $front := resources.Get "js/front.js" }}
 {{ $owlCarousel := resources.Get "js/owl.carousel.min.js" }}
-{{ $script := slice $jquery $bootstrap $cookie $waypoints $counterup $parallax $front $owlCarousel | resources.Concat "js/global.js" | minify | fingerprint }} 
+{{ $script := slice $jquery $bootstrap $cookie $waypoints $counterup $parallax $front $owlCarousel | resources.Concat "js/global.js" | minify }} 
 <script src="{{ $script.Permalink }}" integrity="{{ $script.Data.Integrity }}"></script>
